[package]
name = "http_forker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = {version = "0.7", default-features = false, features = ["codec"] }

log = "0.4"
env_logger = "0.10"
